# LatoTex

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/latotex-agent/: Cargo.toml
src-tauri/crates/latotex-workspace/: Cargo.toml
src-tauri/icons/: .brand-logo.sha256  icon.icns
src-tauri/src/: lib.rs  logging.rs  main.rs  models.rs  models_agent_workflows.rs  models_core.rs  models_docx.rs  models_git.rs  models_library.rs  models_markdown_runtime.rs  models_native_runtime.rs  models_plugins.rs  models_plugins_toolchains.rs  models_plugins_ui.rs  models_resource_warmup.rs  models_settings.rs  models_submission_pack.rs  models_terminal.rs  secure.rs  single_instance.rs  smoke.rs  storage.rs
src-tauri/src/commands/: agent_rebuttal_workflow.rs  agent_workflows.rs  agent_workflows_context.rs  analysis.rs  analysis_search.rs  busytex.rs  busytex_package.rs  channels.rs  channels_dingtalk.rs  channels_email.rs  docx.rs  docx_images.rs  docx_package.rs  docx_tests.rs  downloads.rs  git.rs  health.rs  local_resources.rs  local_resources_tests.rs  markdown_runtime.rs  mod.rs  native_runtime.rs  native_runtime_analysis.rs  native_runtime_analysis_env.rs  native_runtime_analysis_env_tests.rs  native_runtime_analysis_uv.rs  native_runtime_common.rs  native_runtime_latex.rs  native_runtime_latex_core.rs  native_runtime_latex_tectonic.rs  native_runtime_latex_warmup.rs  native_runtime_latex_warmup_tests.rs  plugins.rs  plugins_builtin.rs  plugins_declarative_validation.rs  plugins_declarative_validation_more.rs  plugins_install_validation.rs  plugins_policy.rs  plugins_validation_tests.rs  projects.rs  (+72 more)
src-tauri/src/state/: mod.rs  tests.rs  windows_shortcuts.rs
src-tauri/src/storage/: agent_cache_time.rs  agent_runs.rs  chunk1.rs  chunk2.rs  chunk3.rs  chunk4.rs  chunk5.rs  chunk6.rs  chunk7.rs  chunk8.rs  events_settings_models.rs  library_citation_resolver.rs  library_document_state.rs  library_document_state_tests.rs  library_import_preview.rs  library_import_zotero.rs  library_pdf_download_queue.rs  library_pdf_preview_cache.rs  library_pdf_preview_cache_tests.rs  library_pdf_preview_core.rs  library_remote_endpoints.rs  library_translation_engine.rs  project_snapshot_tree.rs  remote_metadata_fetch.rs  remote_metadata_fetch_tests.rs  search_index.rs  search_index_queries.rs  search_index_tests.rs  storage_bootstrap.rs  workspace_files_search.rs  (+3 more)
(+563 files in other folders)
